<resources>
    <string name="app_name">mHealth Guard</string>
    <string name="licences"><![CDATA[     <ul>     <li>Icon made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a></li>     <li>Heart beat animation <a href="https://github.com/IhorKlimov/Android-Animations">Android-Animations</a></li>     </ul> ]]></string>
    <string name="notification_alert_title">Alert!</string>
    <string name="notification_measurement_title">mHealth Guard running</string>
    <string name="notification_measurement_message">Measurement running</string>
    <string name="restore_deleted_item_title">Event removed!</string>
    <string name="measurement_stop_btn">Stop measurement</string>
    <string name="measurement_start_btn">Start measurement</string>
    <string name="setup_connecting_btn">Connecting</string>
    <string name="measurement_sync_data_btn">Sync data</string>
    <string name="dialog_licences_title">About</string>
    <string name="share_data_for_testing">Share data for testing</string>
    <string name="action_ok" translatable="false">OK</string>
    <string name="action_cancel">CANCEL</string>
    <string name="action_undo">UNDO</string>
    <string name="settings_health_events_not_synced">Please connect to watch earlier.</string>
    <string name="health_event_convulsions_title">Convulsions</string>
    <string name="health_event_heart_rate_anomaly_title">Heart rate anomaly</string>
    <string name="health_event_convulsions_message">The number of motions detected</string>
    <string name="health_event_heart_rate_anomaly_message">Heart rate</string>
    <string name="unit_heart_rate" translatable="false">bpm</string>
    <string name="unit_percentage" translatable="false">%</string>
    <string name="unit_linear_acceleration" translatable="false">\u33A8</string>
    <string name="event_list_empty">No events</string>
    <string name="sensor_data_min">MIN</string>
    <string name="sensor_data_max">MAX</string>
    <string name="sensor_data_average">AVERAGE</string>
    <string name="bottom_navigation_home">Home</string>
    <string name="bottom_navigation_watch">Watch</string>
    <string name="bottom_navigation_history">History</string>
    <string name="bottom_navigation_settings">Settings</string>
    <string name="settings_watch_category">Watch</string>
    <string name="settings_health_events_category">Health events</string>
    <string name="settings_database_category">Database</string>
    <string name="settings_clear_database_title">Clear database</string>
    <string name="settings_clear_database_message">Are you sure you want to clear the database?</string>
    <string name="settings_alert_notification_category">Alert notification</string>
    <string name="settings_android_notification_title">Android notification</string>
    <string name="settings_select_contacts">Select contacts</string>
    <string name="settings_select_events">Select events</string>
    <string name="settings_sms_notification">SMS message</string>
    <string name="settings_sms_user_location">User\'s location in an SMS</string>
    <string name="settings_sampling_time_title">Sampling time (ms)</string>
    <string name="settings_fall_threshold_title">Threshold value</string>
    <string name="settings_fall_min_number_of_threshold_title">Min number of threshold</string>
    <string name="settings_fall_sampling_time_title">Sampling time (s)</string>
    <string name="settings_heart_beat_anomaly_activity_detector_timeout_title">Activity detection timeout (min)</string>
    <string name="settings_heart_beat_anomaly_min_threshold_title">Min threshold value</string>
    <string name="settings_heart_beat_anomaly_activity_max_threshold_title">Max threshold value during activity</string>
    <string name="settings_heart_beat_anomaly_inactivity_max_threshold_title">Max threshold value during inactivity</string>
    <string name="sensor_data_chart_history_no_data">No chart data available</string>
    <string name="sensor_data_chart_live_no_data">Start measurement to see a data</string>
    <string name="sensor_adapter_heart_rate_title">HEART RATE</string>
    <string name="sensor_adapter_acceleration">ACCELERATION</string>
    <string name="sensor_adapter_heart_beat_chart_label">THE NUMBER OF HEART BEATS PER MINUTE</string>
    <string name="sensor_adapter_linear_acceleration_chart_label">LINEAR ACCELERATION VECTOR LENGTH</string>
    <string name="health_event_fall_message">Value of fall</string>
    <string name="health_event_fall_title">Fall</string>
    <string name="health_event_fall_advanced_title">Fall - advanced algorithm</string>
    <string name="advanced_settings_title">Advanced settings</string>
    <string name="history_data_title">History data</string>
    <string name="live_data_title">Live data</string>
    <string name="settings_title">Settings</string>
    <string name="settings_fall_step_detector_title">Step detector</string>
    <string name="settings_fall_step_detector_timeout_title">Step detector timeout (s)</string>
    <string name="cancel_sending_sms_notification">Cancel sending SMS notification</string>
    <string name="sms_message_google_map_url" translatable="false">http://www.google.com/maps/place/%1$s</string>
    <string name="sms_message_location_accuracy">accuracy %1$dm</string>
    <string name="sms_message_unknow_location">unknown</string>
    <string name="sms_message_user_location">User\'s location</string>
    <string name="settings_fall_inactivity_detector_timeout_title">Inactivity timeout (s)</string>
    <string name="settings_fall_inactivity_detector_timeout_summary">Inactivity timeout after a fall</string>
    <string name="settings_heart_beat_anomaly_min_threshold_summary">The value below which the event will be recognized as a heartbeat anomaly</string>
    <string name="settings_heart_beat_anomaly_inactivity_max_threshold_summary">The value above which the event will be recognized as a heartbeat anomaly during inactivity</string>
    <string name="settings_heart_beat_anomaly_activity_max_threshold_summary">The value above which the event will be recognized as a heartbeat anomaly during activity</string>
    <string name="settings_convulsions_motion_threshold_title">Motion threshold value</string>
    <string name="settings_fall_sampling_time_summary">Data collection time for analysis</string>
    <string name="settings_fall_step_detector_summary">The event will only be detected in motion</string>
    <string name="settings_fall_step_detector_timeout_summary">Step detection timeout after which the event will be recognized as a motionless</string>
    <string name="settings_fall_inactivity_detector_threshold_title">Inactivity threshold</string>
    <string name="settings_fall_inactivity_detector_threshold_summary">The value above which the event will be recognized as an activity</string>
    <string name="settings_convulsions_motion_threshold_summary">The value above which the event will be recognized as a motion</string>
    <string name="settings_convulsions_time_title">Sampling time (s)</string>
    <string name="settings_convulsions_time_summary">Data collection time for analysis</string>
    <string name="settings_convulsions_motions_to_detect_summary">The value above which an attack will be detected</string>
    <string name="settings_convulsions_motions_to_cancel_summary">The value below which the attack will be canceled</string>
    <string name="settings_sampling_time_summary">Frequency of refreshing data from sensors</string>
    <string name="settings_heart_beat_anomaly_activity_detector_timeout_summary">Activity detection timeout after which the event will be recognized as inactivity.</string>
    <string name="settings_fall_threshold_summary">The value above which the event will be recognized as a fall</string>
    <string name="settings_fall_min_number_of_threshold_summary">The value above which the event will be recognized as a fall</string>
    <string name="settings_fall_inactivity_detector_title">Inactivity detector</string>
    <string name="settings_fall_inactivity_detector_summary">Detection of inactivity after a fall</string>
    <string name="settings_history_data_expire_title">Data history</string>
    <string name="settings_history_data_expire_summary">Time after which data from the history will be deleted</string>
    <string name="test_mode_title">Test mode</string>
    <string name="test_mode_summary">In test mode, each reading is synchronized</string>
    <string name="battery_saver_title">Battery saver</string>
    <string name="battery_saver_summary">Fall will only be detected in motion.</string>
    <string name="settings_convulsions_motions_to_detect_title">Number of motions to detect</string>
    <string name="settings_convulsions_motions_to_cancel_title">Number of motions to cancel</string>
    <string name="share_data_test_mode">Test mode:</string>
    <string name="share_data_test_mode_general">General</string>
    <string name="share_data_test_mode_fall">Fall</string>
    <string name="share_data_test_mode_convulsions">Convulsions</string>
    <string name="share_data_test_mode_adl">ADL</string>
    <string name="share_data_comment">comment</string>
    <string name="share_data_events_number">number of events</string>
</resources>
